Fixed markdown inline code whitespace.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,7 +16,7 @@ pre[class*='language-'] {
 }
 
 code.language-text {
-  @apply bg-dark-purple-700 px-1 break-words !important;
+  @apply bg-dark-purple-700 px-1 break-words whitespace-pre-line !important;
 }
 
 code[class*='language-']::selection,
